--- a/gridColor.css
+++ b/gridColor.css
@@ -1,6 +1,6 @@
 .wrapper{
-height: 600px;
-width: 600px;
+height: 500px;
+width: 500px;
 position: relative;
 margin: auto;
 top: 40px;
@@ -13,6 +13,13 @@ width: 25%;
 height: 25%;
 float: left;
 opacity: .2;
+}
+
+#pallet {
+	width: 200px;
+	height: 20px;
+	position: relative;
+	outline: solid 2px black;
 }
 
 button {
